Use Spock again